--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "guzzle/guzzle": "3.0.*"
+        "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
         "psr-0": {
